last commit before importing theme

--- a/Themes/MOVE/Styles/_variable-overrides.less
+++ b/Themes/MOVE/Styles/_variable-overrides.less
@@ -14,7 +14,7 @@
 @white:                 #fff;
 
 @brand-primary:         #53b9c7;
-@brand-secondary:       #355973; //F1EDEB
+@brand-secondary:       #25445a; //F1EDEB
 @brand-success:         #52ac52;
 @brand-info:            #69AEB8;
 @brand-warning:         #d6a125;
@@ -77,7 +77,7 @@
 @headings-line-height:      1.05;
 @headings-color:            inherit;
 @font-size-h1:              floor(@font-size-base * 2.4);
-@font-size-h2:              floor(@font-size-base * 2.1);
+@font-size-h2:              floor(@font-size-base * 2);
 @font-size-h3:              ceil(@font-size-base * 1.8);
 @font-size-h4:              ceil(@font-size-base * 1.5);
 @font-size-h5:              ceil(@font-size-base * 1.35);
@@ -89,8 +89,8 @@
 @grid-gutter-width:         @spacing-unit-base;
 
 // Buttons
-@btn-font-size-base:        ceil(@font-size-base * .9);
-@btn-font-size-large:       ceil(@font-size-base);
+@btn-font-size-base:        ceil(@font-size-base);
+@btn-font-size-large:       ceil(@font-size-base * 1.2);
 @btn-font-size-small:       ceil(@font-size-base * .8);
 
 @btn-font-weight:           700;
