--- a/Themes/MOVE/Styles/bs4-utilities/text.less
+++ b/Themes/MOVE/Styles/bs4-utilities/text.less
@@ -3,9 +3,9 @@
 
 //-- text-common --//
 .text-common-utilities() {
-  .text-left   { text-align: left   !important; }
-  .text-right  { text-align: right  !important; }
-  .text-center { text-align: center !important; }
+  .text-left   { text-align: left; }
+  .text-right  { text-align: right; }
+  .text-center { text-align: center; }
 }
 
 //-- text-responsive --//
