--- a/Themes/MOVE/Styles/partials/_media-queries.less
+++ b/Themes/MOVE/Styles/partials/_media-queries.less
@@ -1,8 +1,22 @@
 // Small, Medium & Large Breakpoints
 @media only screen and (min-width: @screen-sm-min) {
-  #navigation {
-    top: 0;
-    bottom: auto;
+
+  .logo {
+    top: 18px;
+    left: 18px;
+
+    img {
+      max-height: 30px;
+    }
+  }
+
+  .list-nav { 
+    a {
+      &:hover {
+        color: @white;
+        background-color: @brand-secondary;
+      }
+    }
   }
   .panel-body { padding: @spacing-unit-base; }
 
@@ -23,37 +37,75 @@
   .well-lg { padding: @spacing-unit-base; }
   .panel { font-size: 100%; }
 
+  .list-nav {
+    a {
+      padding: (@spacing-unit-base/3*2);
+    }
+  }
+
+  .list-nav-menu {
+    height: 100%;
+    width: auto;
+
+    li {
+      width: auto;
+  
+      a {
+        width: auto;
+      }
+    }
+  }
+
 }
 
 // Medium & Large Breakpoints
 @media only screen and (min-width: @screen-md-min) {
-    .lead { font-size: ceil(@font-size-base * 1.3); }
-    .text-handwritten { font-size: ceil(@font-size-base * 1.5); }
-    .jumbo { font-size: 84px; }
+  body { font-size: ceil(@font-size-base * 1.05); }
 
-    .accordion {
-        .panel-heading {
-          position: relative;
-      
-          a:after {
-            margin-top: -19px;
-          }
-      
-          a.collapsed:after {
-            margin-top: -16px;
-          }
+  h1, .h1 { font-size: floor(@font-size-h1 * 1.5); }
+  h2, .h2 { font-size: floor(@font-size-h2 * 1.3); }
+
+  .lead { font-size: ceil(@font-size-base * 1.3); }
+  .text-handwritten { font-size: ceil(@font-size-base * 1.5); }
+  .jumbo { font-size: 84px; }
+
+  .accordion {
+      .panel-heading {
+        position: relative;
+    
+        a:after {
+          margin-top: -19px;
+        }
+    
+        a.collapsed:after {
+          margin-top: -16px;
         }
       }
+    }
+
+  .list-nav {
+    a {
+      padding: @spacing-unit-base !important;
+    }
+  }
+
+  .logo {
+    top: 25px;
+    left: 25px;
+
+    img {
+      max-height: 40px;
+    }
+  }
+
 }
 
 // Large Breakpoint
 @media only screen and (min-width: @screen-lg-min) {
 
-    h1, .h1 { font-size: floor(@font-size-h1 * 1.2); }
-    h2, .h2 { font-size: floor(@font-size-h2 * 1.2); }
-    h3, .h3 { font-size: floor(@font-size-h3 * 1.2); }
-    h4, .h4 { font-size: floor(@font-size-h4 * 1.2); }
-    h5, .h5 { font-size: floor(@font-size-h5 * 1.2); }
-    h6, .h6 { font-size: floor(@font-size-h6 * 1.2); }
+  h3, .h3 { font-size: floor(@font-size-h3 * 1.2); }
+  h4, .h4 { font-size: floor(@font-size-h4 * 1.2); }
+  h5, .h5 { font-size: floor(@font-size-h5 * 1.2); }
+  h6, .h6 { font-size: floor(@font-size-h6 * 1.2); }
 
 }
