--- a/Themes/MOVE/Styles/partials/_positioning.less
+++ b/Themes/MOVE/Styles/partials/_positioning.less
@@ -1,7 +1,12 @@
+.position-absolute { position: absolute; }
+.position-relative { position: relative; }
+.position-fixed { position: fixed; }
+
 .floating {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .floating-item {
