--- a/Themes/MOVE/Styles/partials/_typography.less
+++ b/Themes/MOVE/Styles/partials/_typography.less
@@ -12,7 +12,10 @@ h6, .h6 {
     margin-top: 0;
 }
 
-h1, .h1,
+h1, .h1 {
+    letter-spacing: -1.5px;
+}
+
 h2, .h2,
 h3, .h3,
 h4, .h4 {
@@ -41,10 +44,10 @@ blockquote,
 
 blockquote { font-size: @font-size-base; }
 
-.jumbo { font-size: 72px; }
+.jumbo { font-size: 52px; }
 
 .lead { 
-    font-size: ceil(@font-size-base * 1.2);
+    font-size: ceil(@font-size-base * 1.1);
 }
 .text-italic { font-style: italic; }
 
